Fixing widget z-index.

--- a/src/less/widgets/widgets-general.less
+++ b/src/less/widgets/widgets-general.less
@@ -8,7 +8,7 @@
 
 /* Default widget styles */
 .pf-widget {
-  z-index: 1000;
+  z-index: 9999;
   font-family: Arial, sans-serif;
   visibility: hidden;
   opacity: 0;
